# DBMS-S6-EWallet

./: .gitignore  Diagram1.dia  README.md  TODO.md  dbms-midterm-2.odt  dbms-midterm-ewallet.odt  package-lock.json  package.json
dbms-backend/: .gitignore  FRONTEND_INTEGRATION.md  Makefile  README.md  SQL_README.md  TODO.md  account_procedures.sql  admin_procedures.sql  database.py  db_connect.sql  init_db.sql  main.py  main_sql.py  models.py  populate_db.py  product_procedures.sql  pyproject.toml  requirements.txt  run_sql_api.sh  schema.sql  schemas.py  sql_adapter.py  test.db  user_procedures.sql
dbms-backend/api/: auth.py  auth_lib.py  database.py  file_upload.py  main.py  models.py  schemas.py  service.py
dbms-backend/api/routers/: __init__.py  account.py  accounts.py  admin.py  auth.py  cart.py  checkout.py  merchant.py  order.py  process_withdrawal.py  product.py  redeem_rewards.py  transaction.py  transactions.py  user.py  withdrawal.py
dbms-backend/config/: logging_config.py
dbms-backend/scripts/: check_products.py  download_sample_images.py  init_db.py  migrate.py  populate_db.py  populate_products.py
dbms-backend/sql_implementation/: 00_migration.sql  01_create_tables.sql  03_account_functions.sql  05_cart_order_functions.sql  06_triggers.sql  07_admin_functions.sql  README.md
dbms-frontend/: .eslintrc.js  fix-install.sh  package-lock.json  package.json  restart.sh
dbms-frontend/public/: index.html
dbms-frontend/scripts/: download-images.js
dbms-frontend/src/: App.js  index.js  routes.js
dbms-frontend/src/api/: auth.js  products.js  user.js
dbms-frontend/src/components/: AddFunds.css  AddFunds.js  AdminDashboard.js  AdminDashboard.jsx  AdminLogin.js  AdminSignup.js  Cart.css  Cart.js  Checkout.css  Checkout.js  Dashboard.css  Dashboard.js  Dashboard.jsx  Login.js  Login.jsx  MerchantDashboard.css  MerchantDashboard.js  MerchantDashboard.jsx  MerchantLogin.css  MerchantLogin.js  MerchantLogs.css  MerchantLogs.js  MerchantProfile.js  MerchantSignup.js  MyOrders.css  MyOrders.js  Navbar.js  Navbar.jsx  NoPage.js  OrderConfirmation.css  OrderConfirmation.js  Orders.js  Orders.jsx  ProductDetails.css  ProductDetails.js  ProductForm.jsx  ProductGrid.jsx  ProductView.css  ProductView.js  Products.js  (+12 more)
dbms-frontend/src/components/account/: AddFunds.js  RewardsConversion.js  Topup.js  Wallet.js
dbms-frontend/src/components/admin/: AdminDashboard.js  AdminLogin.js  AdminSignup.js
dbms-frontend/src/components/auth/: Login.js  Register.js  Signup.js
dbms-frontend/src/components/cart/: Cart.js  Checkout.js
dbms-frontend/src/components/checkout/: Checkout.css  Checkout.js
dbms-frontend/src/components/merchant/: MerLogin.css  MerchantDashboard.css  MerchantDashboard.js  MerchantLogin.js  MerchantLogs.js  MerchantProfile.js  MerchantSignup.css  MerchantSignup.js
dbms-frontend/src/components/order/: OrderConfirmation.js  Orders.js
dbms-frontend/src/components/previous/: App2.js  Login2.js  Register.js
dbms-frontend/src/components/product/: ProductDetails.css  ProductDetails.js  ProductForm.js  ProductGrid.js  ProductView.js  Products.js
dbms-frontend/src/components/user/: Dashboard.css  Dashboard.js  MyOrders.css  MyOrders.js  Profile.js  UserProfile.js
dbms-frontend/src/context/: AuthContext.js
dbms-frontend/src/extra/: App2.js
dbms-frontend/src/routes/: AdminDashboard.js  AppRoutes.js  Navbar.js  NoPage.js
dbms-frontend/src/styles/: AdminDashboard.css  AdminLogin.css  AdminSignup.css  Cart.css  Dashboard.css  Login.css  MerLogin.css  MerchantLogs.css  MerchantProfile.css  ProductDetails.css  ProductGrid.css  Products.css  Profile.css  RewardsConversion.css  common.css
dbms-project/: admin_utils.py  auth.py  cart_order_procedures.sql  check_products.py  database.py  file_upload.py  init_db.py  init_db.sql  main.py  migrate.py  models.py  package-lock.json  package.json  populate_db.py  populate_products.py  requirements.txt  schemas.py
dbms-project/dbms/: pyvenv.cfg
dbms-project/dbms-project/: auth.py  schemas.py
dbms-project/sql_implementation/: 02_user_functions.sql  04_product_functions.sql  06_triggers.sql  README.md
dbms-project/unused/: comments.py  download_sample_images.py  init_db.py  migrate.py
dbms-project/unused/dbms-project/: auth.py  schemas.py
dbms-project/unwanted/: init_db.py  migrate.py
dbms-project/unwanted/dbms-project/: schemas.py
dbms2/: pyvenv.cfg
docs/: Diagram1.dia  Diagram1.dia.autosave  Weekend-Plan-DBMS.docx  notes.txt
testing-1/backend/: models.py
